<resources>
    <!--    Global-->
    <string name="app_name">T04-AdvancedRoboDriving</string>

    <!-- Navigation Page-->
    <string name="connection_tab_label">Connect</string>
    <string name="drive_tab_label">Drive</string>
    <string name="sound_tab_label">Play</string>
    <string name="sensor_tab_label">Sense</string>

    <!--    Connect tab-->
    <string name="remaining_battery_life_label">Remaining Battery Life:</string>
    <string name="remaining_battery_life_null">-----%</string>
    <string name="remaining_battery_life">%1$.0f%%</string>
    <string name="connecting_indicator_title">Connecting…</string>
    <string name="has_permissions_label">App has Bluetooth Permissions</string>
    <string name="robot_in_list_label">Robot is in Paired Device List</string>
    <string name="robot_connected_label">Connected to Robot</string>
    <string name="robot_name_field_label">Robot Name</string>
    <string name="connect_button_label">Connect to Robot</string>
    <string name="disconnect_button_label">Disconnect from Robot</string>
    <string name="default_robot_name">HIMMYNEUTRON</string>

    <!--    Drive tab-->
    <string name="fragment_robot_driving_label">Drive the Robot</string>
    <string name="beepButtonText">Play Sound</string>
    <string name="open_claw_button_text">Open Claw</string>
    <string name="close_claw_button_text">Close Claw</string>

    <!--    Sound tab-->
    <string name="play_sound_file_button_label">Play Sound File</string>
    <string name="play_pre_programmed_tune_button_label">Play Preset Tune</string>
    <string name="volume_slider_label">Volume</string>
    <string name="volume_slider_label_default">50</string>
    <string name="fragment_music_player_label">Play Some Music</string>

    <!--    Sensor tab-->
    <string name="speed_slider_label_default">50</string>
    <string name="drive_to_wall_button_label">Drive to Wall</string>
    <string name="follow_Line_button_label">Follow Line</string>
    <string name="stop_driving_button_label">Stop Driving</string>
    <string name="distance_to_wall_text">%1$.1f cm</string>
</resources>