<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.RobotConnectionFragment">
    <data>
        <variable
            name="bluetoothPermissionsGranted"
            type="Boolean" />

        <variable
            name="robotIsPaired"
            type="Boolean" />
        <variable
            name="robotIsConnected"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/robotNameField"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:autofillHints="robotName"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/default_robot_name"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/robotNameFieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/robotNameField"
            android:text="@string/robot_name_field_label"
            app:layout_constraintEnd_toEndOf="@+id/robotNameField"
            app:layout_constraintStart_toStartOf="@+id/robotNameField"
            app:layout_constraintTop_toBottomOf="@+id/robotNameField" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/connect_button_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/robotNameField" />

        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/disconnect_button_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connectButton" />

        <LinearLayout
            android:id="@+id/StatusMessagesContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/robotNameField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Switch
                android:id="@+id/bluetoothPermissionIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{bluetoothPermissionsGranted}"
                android:clickable="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/has_permissions_label"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/robotInListIndicator"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:checked="@{robotIsPaired}"
                android:clickable="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/robot_in_list_label"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/robotConnectedIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{robotIsConnected}"
                android:clickable="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/robot_connected_label"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
