<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.RobotSensorPageFragment">

    <data>

        <variable
            name="forwardSpeed"
            type="Integer" />

        <variable
            name="centimetersToWall"
            type="Float" />

        <variable
            name="surfaceBrightness"
            type="Float" />

        <variable
            name="batteryRemainingPercentage"
            type="Double" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sensorPageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/distanceToWallText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@{@string/distance_to_wall_text(centimetersToWall)}"
            android:textSize="72sp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/driveToWallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drive_to_wall_button_label"
            app:layout_constraintBottom_toTopOf="@+id/followLineButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/followLineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_Line_button_label"
            app:layout_constraintBottom_toTopOf="@+id/stopDrivingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driveToWallButton" />

        <Button
            android:id="@+id/stopDrivingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_driving_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followLineButton" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>